# c-code-creation-preprocessor

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  insane.h  log.c  log.h  main.c  str.c  str.h  types.h
test/: test0.c  test1.c
